--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.2"
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~4.1",
+        "guzzlehttp/guzzle": "~4.2",
         "guzzlehttp/guzzle-services": "~0.3"
     },
     "autoload": {
@@ -28,5 +28,5 @@
             "Brightpearl\\Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
